--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/s3-request-presigner": "^3.485.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1531.0",
     "buffer": "^6.0.3",
     "dotenv": "^16.0.0",
+    "firebase": "^10.7.1",
     "react": "^18.0.0",
     "react-aws-s3": "^1.5.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.21.1",
     "react-s3": "^1.3.1",
+    "react-s3-typescript": "^2.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
